# seed91

./: .gitignore  DEPLOYMENT.md  app.js  app.test.js  clean-worktree.test.js  desktop-download.test.js  desktop-pet.test.js  desktop-stability.test.js  desktop-startup.test.js  ecosystem.config.cjs  frontend-api.test.js  frontend-copy.test.js  package-lock.json  package.json  path-backup-20260617-225725.txt  path-backup-machine-20260617-230853.txt  path-backup-machine-20260617-231309.txt  test_import_song.py
NeteaseCloudMusicApiBackup/: README.MD
NeteaseCloudMusicApiEnhanced/: package-lock.json  package.json  server.js
NeteaseCloudMusicApiEnhanced/scripts/: prepare.cjs
NeteaseCloudMusicApiEnhanced/test/: prepare.test.cjs
apps/desktop-pet/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-pet/src-tauri/capabilities/: default.json
apps/desktop-pet/src-tauri/src/: app_config.rs  app_logger.rs  main.rs
deploy/: README.md
deploy/nginx/: music-site.conf.example
deploy/scripts/: check-public-site.sh  setup-ubuntu.sh
desktop/: api-runner.cjs  main.cjs
desktop/docs/: desktop-pet.md
desktop/main/: tray.cjs
desktop/preload/: lyric-preload.cjs  pet-preload.cjs  (+1 more)
docs/: clean-worktree.md  release-guide.md
frontend/: index.html  sitemap.xml
scripts/: clean-worktree.cjs  desktop-dev.cjs  desktop-dev.cmd  fix-system-path-nodejs.ps1  publish-desktop.cjs  run-node-script.cmd  runtime-paths.cjs  start-api-enhanced.cjs
(+73 files in other folders)
