[package]
name = "music-pet-desktop"
version = "0.1.0"
description = "Minimal Tauri desktop shell for Music Pet."
authors = ["Music Pet"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
